src_old/objects/EventChangeNotification__e.object
<CustomObject>
    <fields>
        <fullName>EntityId__c</fullName>
        <label>Entity Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <label>Entity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventParameter__c</fullName>
        <label>Event Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EventChangeNotification</label>
    <pluralLabel>EventChangeNotifications</pluralLabel>
</CustomObject>